argo/clusters/eks-demo-tsh/applications/nginx-demo/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: "alb"
      alb.ingress.kubernetes.io/backend-protocol: HTTP
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
      alb.ingress.kubernetes.io/group.name: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
    name: nginx-demo
    namespace: nginx
  spec:
    rules:
    - host: nginx.devops-sandbox.aws.tsh.io
      http:
        paths:
        - path: /
          backend:
            service:
              name: nginx
              port:
                number: 80
          pathType: Prefix
    tls:
    - hosts:
      - nginx.devops-sandbox.aws.tsh.io
